--- a/index.html
+++ b/index.html
@@ -66,6 +66,58 @@
             padding: 15px;
             margin-top: 50px;
         }
+
+        /* Navigation Menu */
+.nav-menu {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+}
+
+.nav-menu li {
+    position: relative;
+}
+
+.nav-menu li a {
+    display: block;
+    padding: 15px 20px;
+    color: white;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+.nav-menu li a:hover {
+    color: #00c6ff;
+}
+
+/* Dropdown submenu */
+.submenu {
+    display: none;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    background-color: #222;
+    list-style: none;
+    padding: 0;
+    min-width: 200px;
+}
+
+.submenu li a {
+    padding: 12px 15px;
+    display: block;
+}
+
+.submenu li a:hover {
+    background-color: #333;
+}
+
+/* Show dropdown when hovering Services */
+.dropdown:hover .submenu {
+    display: block;
+}
+
     </style>
 </head>
 
@@ -76,11 +128,23 @@
 </header>
 
 <nav>
-    <a href="#">Home</a>
-    <a href="#">About</a>
-    <a href="#">Services</a>
-    <a href="#">Contact</a>
+    <ul class="nav-menu">
+        <li><a href="/">Home</a></li>
+        <li><a href="/myportfolio/">My Portfolio</a></li>
+
+        <li class="dropdown">
+            <a href="#">Services ▾</a>
+            <ul class="submenu">
+                <li><a href="#">Web Design</a></li>
+                <li><a href="#">Website Development</a></li>
+                <li><a href="#">SEO Optimization</a></li>
+            </ul>
+        </li>
+
+        <li><a href="#">Contact</a></li>
+    </ul>
 </nav>
+
 
 <section class="hero">
     <h1>Welcome to My Website</h1>
@@ -94,4 +158,5 @@
 
 </body>
 </html>
+
 
