--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 .submenu li a {
     padding: 12px 15px;
     display: block;
-    ext-align: left; /* left-aligns submenu text */
+    text-align: left; /* left-aligns submenu text */
 }
 
 .submenu li a:hover {
@@ -160,6 +160,7 @@
 
 </body>
 </html>
+
 
 
 
