--- a/index.html
+++ b/index.html
@@ -133,12 +133,13 @@
         <li><a href="/">Home</a></li>
         <li><a href="/myportfolio/">My Portfolio</a></li>
 
-        <li class="dropdown">
+       <li class="dropdown">
             <a href="#">Services ▾</a>
             <ul class="submenu">
+                <li><a href="#">SEO Optimization</a></li>
+                <li><a href="#">Digital Marketing</a></li>
                 <li><a href="#">Web Design</a></li>
                 <li><a href="#">Website Development</a></li>
-                <li><a href="#">SEO Optimization</a></li>
             </ul>
         </li>
 
@@ -160,6 +161,7 @@
 
 </body>
 </html>
+
 
 
 
