--- a/seo.html
+++ b/seo.html
@@ -1,1 +1,58 @@
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>SEO Optimization | My Brand</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<style>
+body{margin:0;font-family:Arial;background:#111;color:#eee;}
+header{background:linear-gradient(90deg,#0f2027,#203a43,#2c5364);padding:25px;text-align:center;}
+nav{background:#1c1c1c;text-align:center;}
+nav a{color:#fff;text-decoration:none;padding:15px 20px;display:inline-block;font-weight:bold;}
+nav a:hover{color:#00c6ff;}
+.container{max-width:1000px;margin:auto;padding:80px 20px;}
+h1{font-size:42px;}
+h2{color:#00c6ff;margin-top:40px;}
+p{color:#ccc;font-size:18px;line-height:1.7;}
+footer{background:#1c1c1c;text-align:center;padding:20px;margin-top:50px;color:#aaa;}
+</style>
+</head>
+
+<body>
+
+<header><h2>MY BRAND</h2></header>
+
+<nav>
+<a href="/myportfolio/">Home</a>
+<a href="/myportfolio/myportfolio/">My Portfolio</a>
+</nav>
+
+<div class="container">
+<h1>SEO Optimization</h1>
+
+<p>
+Search Engine Optimization helps your business get discovered online.
+We optimize structure, speed, and content to improve visibility on search engines.
+</p>
+
+<h2>SEO Services</h2>
+<p>
+✔ Keyword optimization<br>
+✔ Technical SEO setup<br>
+✔ Performance improvements<br>
+✔ Search ranking strategy
+</p>
+
+<h2>Results-Focused Strategy</h2>
+<p>
+Our SEO approach focuses on sustainable growth — bringing consistent organic traffic
+that converts into real business opportunities.
+</p>
+</div>
+
+<footer>© 2026 My Brand</footer>
+
+</body>
+</html>
 
