--- a/index.html
+++ b/index.html
@@ -134,14 +134,15 @@
         <li><a href="/myportfolio/">My Portfolio</a></li>
 
        <li class="dropdown">
-            <a href="#">Services ▾</a>
-            <ul class="submenu">
-                <li><a href="#">SEO Optimization</a></li>
-                <li><a href="#">Digital Marketing</a></li>
-                <li><a href="#">Web Design</a></li>
-                <li><a href="#">Website Development</a></li>
-            </ul>
-        </li>
+    <a href="#">Services ▾</a>
+    <ul class="submenu">
+        <li><a href="webdesign/">Web Design</a></li>
+        <li><a href="webdevelopment/">Website Development</a></li>
+        <li><a href="seo/">SEO Optimization</a></li>
+        <li><a href="digitalmarketing/">Digital Marketing</a></li>
+    </ul>
+</li>
+
 
         <li><a href="/">About</a></li>
         <li><a href="#">Contact</a></li>
@@ -161,6 +162,7 @@
 
 </body>
 </html>
+
 
 
 
