--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 <nav>
     <ul class="nav-menu">
         <li><a href="/">Home</a></li>
-        <li><a href="/myportfolio/">My Portfolio</a></li>
+        <li><a href="./">My Portfolio</a></li>
 
        <li class="dropdown">
     <a href="#">Services ▾</a>
@@ -162,6 +162,7 @@
 
 </body>
 </html>
+
 
 
 
