--- a/webdevelopment/index.html
+++ b/webdevelopment/index.html
@@ -24,7 +24,7 @@ footer{background:#1c1c1c;text-align:center;padding:20px;margin-top:50px;color:#
 <header><h2>MY BRAND</h2></header>
 
 <nav>
-<a href="/myportfolio/">Home</a>
+<a href="./">Home</a>
 <a href="./">My Portfolio</a>
 </nav>
 
