--- a/webdesign/index.html
+++ b/webdesign/index.html
@@ -16,79 +16,6 @@ h1{font-size:42px;margin-bottom:20px;}
 h2{color:#00c6ff;margin-top:40px;}
 p{color:#ccc;font-size:18px;line-height:1.7;}
 footer{background:#1c1c1c;text-align:center;padding:20px;margin-top:50px;color:#aaa;}
-
-  /* Main nav bar */
-.main-nav {
-  background-color: #1c1c1c;
-  padding: 10px 20px;
-  font-family: Arial, sans-serif;
-}
-
-.main-nav ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  display: flex;
-  justify-content: center; /* Center main menu items */
-  align-items: center;
-  flex-wrap: wrap;
-}
-
-.main-nav ul li {
-  position: relative;
-}
-
-.main-nav a.nav-link {
-  color: #fff;
-  text-decoration: none;
-  padding: 12px 18px;
-  display: block;
-  font-weight: bold;
-  transition: color 0.3s, background 0.3s;
-}
-
-.main-nav a.nav-link:hover {
-  color: #00c6ff;
-}
-
-/* Active page highlight */
-.main-nav a.active {
-  color: #00c6ff;
-  border-bottom: 2px solid #00c6ff;
-}
-
-/* Dropdown menu */
-.main-nav .dropdown:hover .submenu {
-  display: block;
-}
-
-.main-nav .submenu {
-  display: none;
-  position: absolute;
-  top: 100%;
-  left: 0; /* Left-align submenu */
-  background-color: #222;
-  padding: 0;
-  min-width: 220px;
-  z-index: 1000;
-  border-radius: 4px;
-}
-
-.main-nav .submenu li {
-  width: 100%;
-}
-
-.main-nav .submenu li a {
-  padding: 10px 15px;
-  font-weight: normal;
-  color: #eee;
-}
-
-.main-nav .submenu li a:hover {
-  background-color: #00c6ff;
-  color: #111;
-}
-
 </style>
 </head>
 
@@ -96,21 +23,14 @@ footer{background:#1c1c1c;text-align:center;padding:20px;margin-top:50px;color:#
 
 <header><h2>MY BRAND</h2></header>
 
-<nav class="main-nav">
-  <ul>
-    <li><a href="./" class="nav-link active">Home</a></li>
-    <li><a href="./" class="nav-link">My Portfolio</a></li>
-    <li class="dropdown">
-      <a href="#" class="nav-link">Services ▾</a>
-      <ul class="submenu">
-        <li><a href="webdesign/" class="nav-link">Web Design</a></li>
-        <li><a href="webdevelopment/" class="nav-link">Website Development</a></li>
-        <li><a href="seo/" class="nav-link">SEO Optimization</a></li>
-        <li><a href="digitalmarketing/" class="nav-link">Digital Marketing</a></li>
-      </ul>
-    </li>
-    <li><a href="#contact" class="nav-link">Contact</a></li>
-  </ul>
+<nav>
+<a href="/myportfolio/">Home</a>
+<a href="/myportfolio/#">My Portfolio</a>
+<a href="/myportfolio/webdesign/">Web Design</a>
+  <nav>
+    <a href="./">Home</a>
+    <a href="./">My Portfolio</a>
+    <a href="webdesign/">Web Design</a>
 </nav>
 
 
