--- a/index.html
+++ b/index.html
@@ -17,25 +17,10 @@
             background: linear-gradient(90deg, #0f2027, #203a43, #2c5364);
             padding: 20px;
             text-align: center;
-        }
+        } /* from here */
 
-        nav {
-            background-color: #222;
-            padding: 10px;
-            text-align: center;
-        }
-
-        nav a {
-            color: white;
-            text-decoration: none;
-            margin: 0 15px;
-            font-weight: bold;
-        }
-
-        nav a:hover {
-            color: #00c6ff;
-        }
-
+        
+/* pause here */
         .hero {
             padding: 100px 20px;
             text-align: center;
@@ -67,57 +52,8 @@
             margin-top: 50px;
         }
 
-        /* Navigation Menu */
-.nav-menu {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    justify-content: center;
-}
-
-.nav-menu li {
-    position: relative;
-}
-
-.nav-menu li a {
-    display: block;
-    padding: 15px 20px;
-    color: white;
-    text-decoration: none;
-    font-weight: bold;
-}
-
-.nav-menu li a:hover {
-    color: #00c6ff;
-}
-
-/* Dropdown submenu */
-.submenu {
-    display: none;
-    position: absolute;
-    top: 100%;
-    left: 0;
-    background-color: #222;
-    list-style: none;
-    padding: 0;
-    min-width: 200px;
-}
-
-.submenu li a {
-    padding: 12px 15px;
-    display: block;
-    text-align: left; /* left-aligns submenu text */
-}
-
-.submenu li a:hover {
-    background-color: #333;
-}
-
-/* Show dropdown when hovering Services */
-.dropdown:hover .submenu {
-    display: block;
-}
+       
+} /* end here */
 
         /* Main nav bar */
 .main-nav {
@@ -230,6 +166,7 @@
 
 </body>
 </html>
+
 
 
 
