--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 <nav class="main-nav">
   <ul>
     <li><a href="./" class="nav-link active">Home</a></li>
-    <li><a href="./" class="nav-link">My Portfolio</a></li>
+    <li><a href="portfolio/" class="nav-link">My Portfolio</a></li>
     <li class="dropdown">
       <a href="#" class="nav-link">Services ▾</a>
       <ul class="submenu">
@@ -166,6 +166,7 @@
 
 </body>
 </html>
+
 
 
 
