--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -138,15 +138,8 @@
 
 <nav class="main-nav">
   <ul>
-    <li><a href="./" class="nav-link active">Home</a></li>
+    <li><a href="/myportfolio/" class="nav-link active">Home</a></li>
     <li><a href="portfolio/" class="nav-link">My Portfolio</a></li>
-    <li class="dropdown">
-      <a href="#" class="nav-link">Services ▾</a>
-      <ul class="submenu">
-        <li><a href="webdesign/" class="nav-link">Web Design</a></li>
-        <li><a href="webdevelopment/" class="nav-link">Website Development</a></li>
-        <li><a href="seo/" class="nav-link">SEO Optimization</a></li>
-        <li><a href="digitalmarketing/" class="nav-link">Digital Marketing</a></li>
       </ul>
     </li>
     <li><a href="#contact" class="nav-link">Contact</a></li>
