--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -139,7 +139,7 @@
 <nav class="main-nav">
   <ul>
     <li><a href="/myportfolio/" class="nav-link active">Home</a></li>
-    <li><a href="portfolio/" class="nav-link">My Portfolio</a></li>
+    <li><a href="./" class="nav-link">My Portfolio</a></li>
       </ul>
     </li>
     <li><a href="#contact" class="nav-link">Contact</a></li>
