--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 <section class="hero">
     <h1>Welcome to My Website</h1>
     <p>Build something powerful and unstoppable.</p>
-    <a href="#" class="btn">Get Started</a>
+    <a href="contact/" class="btn">Get Started</a>
 </section>
 
 <footer>
@@ -166,6 +166,7 @@
 
 </body>
 </html>
+
 
 
 
