--- a/digitalmarketing/index.html
+++ b/digitalmarketing/index.html
@@ -49,6 +49,11 @@ We develop strategies that increase visibility, engagement, and business growth.
 Our goal is simple — turn online attention into measurable results and long-term customer relationships.
 </p>
 </div>
+<section id="contact" style="text-align:center; padding:60px 20px;">
+    <h2>Contact Me</h2>
+    <p>Ready to grow your business online?</p>
+    <p>Email: your@email.com</p>
+</section>
 
 <footer>© 2026 My Brand</footer>
 
