--- a/seo/index.html
+++ b/seo/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>SEO Optimization | My Brand</title>
+<title>SEO Optimization |SEO John Yu/title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
@@ -21,7 +21,7 @@ footer{background:#1c1c1c;text-align:center;padding:20px;margin-top:50px;color:#
 
 <body>
 
-<header><h2>MY BRAND</h2></header>
+<header><h2>SEO: JOHN YU</h2></header>
 
 <nav>
 <a href="/myportfolio/">Home</a>
@@ -50,7 +50,12 @@ Our SEO approach focuses on sustainable growth — bringing consistent organic t
 that converts into real business opportunities.
 </p>
 </div>
-
+<section id="contact" style="text-align:center; padding:60px 20px;">
+    <h2>Contact Me</h2>
+    <p>Ready to grow your business online?</p>
+    <p>Email: support@email.com</p>
+</section>
+  
 <footer>© 2026 My Brand</footer>
 
 </body>
