--- a/webdesign/index.html
+++ b/webdesign/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Web Design | My Brand</title>
+<title>Web Design | SEO John Yu/title>
 
 <style>
 body{margin:0;font-family:Arial;background:#111;color:#eee;}
@@ -21,7 +21,7 @@ footer{background:#1c1c1c;text-align:center;padding:20px;margin-top:50px;color:#
 
 <body>
 
-<header><h2>MY BRAND</h2></header>
+<header><h2>SEO: John Yu</h2></header>
 
 <nav>
 <a href="/myportfolio/">Home</a>
@@ -51,7 +51,13 @@ A website should not only look good — it should communicate authority, trust, 
 Every design decision is made to strengthen your online presence.
 </p>
 </div>
-
+  
+<section id="contact" style="text-align:center; padding:60px 20px;">
+    <h2>Contact Me</h2>
+    <p>Ready to grow your business online?</p>
+    <p>Email: support@email.com</p>
+</section>
+  
 <footer>© 2026 My Brand | Professional Web Solutions</footer>
 
 </body>
