--- a/webdesign/index.html
+++ b/webdesign/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Web Design | SEO John Yu/title>
+<title>Web Design | SEO John Yu</title>
 
 <style>
 body{margin:0;font-family:Arial;background:#111;color:#eee;}
