--- a/seo/index.html
+++ b/seo/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>SEO Optimization |SEO John Yu/title>
+<title>SEO Optimization |SEO John Yu</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
