--- a/contact/index.html
+++ b/contact/index.html
@@ -116,11 +116,11 @@ footer {
 
 <nav class="main-nav">
   <ul>
-    <li><a href="../">Home</a></li>
-    <li><a href="../portfolio/">My Portfolio</a></li>
-    <li><a href="../webdesign/">Web Design</a></li>
-    <li><a href="../seo/">SEO Optimization</a></li>
-    <li><a href="../contact/" class="active">Contact</a></li>
+    <li><a href="/myportfolio/">Home</a></li>
+    <li><a href="portfolio/">My Portfolio</a></li>
+    <li><a href="webdesign/">Web Design</a></li>
+    <li><a href="seo/">SEO Optimization</a></li>
+    <li><a href="/" class="active">Contact</a></li>
   </ul>
 </nav>
 
